fixed issue where using nav bar would have section title overlapped by nav bar

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ img{
 
 .projects_img{
   margin:10px;
-  justify-content: right;
+  justify-content: center;
   width: 25%;
   display: flex;
 }
